syntax = "proto3";
package com.google.startupos.tools.reviewer.aa;

option java_package = "com.google.startupos.tools.reviewer.aa";
option java_outer_classname = "Protos";

/* Config protos. */
message Config {
  // Base folder
  string base_path = 1;
}
